# LWGNet

./: demo.ipynb  pyproject.toml
src/LWGNet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lwgnet/: layers.py  model.py  reconstruction_utils.py  subLayers.py
