[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LWGNet"
version = "1.0.0"
dependencies = [
  "matplotlib>=3.10.9",
  "scipy>=1.17.1",
  "torch>=2.6.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
